--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<canvas></canvas>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fighting Game</title>
+</head>
+<body>
+    <canvas></canvas> 
+    <script src="index.js"></script>
+</body>
+</html>
 
-<script src="index.js"></script>
+
